--- a/client/src/pages/Landing/Landing.css
+++ b/client/src/pages/Landing/Landing.css
@@ -17,6 +17,11 @@
 p {
     font-size: 16px;
 }
+
+.closeButton {
+    float: right;
+    margin-bottom: 5px;
+}
 /*
 .visible.transition {
   margin-top: auto !important;
