EasterEgg, Scanner route, routes back to home page, segment color fix

--- a/client/src/pages/Landing/Landing.css
+++ b/client/src/pages/Landing/Landing.css
@@ -26,7 +26,8 @@ p {
   top: 20%;
 }*/
 #landingTitleBackground{
-    background-color: #163B53
+    background-color: #163B53;
+    color: white;
 }
 
 #isemailModalOpen, #isSlideDeckOpen{
