--- a/client/src/pages/Landing/Landing.css
+++ b/client/src/pages/Landing/Landing.css
@@ -6,11 +6,7 @@
     text-align: left;
 }
 
-#about {
-    margin: 50px;
-}
-
-#founders {
+#about, #founders, #updates, #annoucement {
     margin: 50px;
 }
 
@@ -25,7 +21,7 @@ p {
   position: relative;
   top: 20%;
 }*/
-#landingTitleBackground{
+#landingTitleBackground, #landingAnnoucements{
     background-color: #163B53;
     color: white;
 }
@@ -37,4 +33,8 @@ p {
     color:white;
     font-size: 18px;
 
+}
+
+#h1Annoucement{
+    clear: "left"
 }
