adjust emailSignUp modal title, landing page email message, and personcard max width

--- a/client/src/components/EmailSignUp/emailSignUp.css
+++ b/client/src/components/EmailSignUp/emailSignUp.css
@@ -6,7 +6,11 @@
     margin:50px;
 } */
 
-#emailSignUpButton{
+#businessSignUpButton{
     background-color: #163B53;
+    color: white;
+}
+#emailSignUpButton{
+    background-color: #22859A;
     color: white;
 }
