--- a/client/src/pages/Landing/Landing.css
+++ b/client/src/pages/Landing/Landing.css
@@ -6,7 +6,7 @@
     text-align: left;
 }
 
-#about, #founders, #updates, #annoucement {
+#about, #founders, #updates, #announcement {
     margin: 50px;
 }
 
@@ -21,7 +21,7 @@ p {
   position: relative;
   top: 20%;
 }*/
-#landingTitleBackground, #landingAnnoucements{
+#landingTitleBackground, #landingAnnouncements{
     background-color: #163B53;
     color: white;
 }
@@ -35,6 +35,6 @@ p {
 
 }
 
-#h1Annoucement{
+#h1Announcement{
     clear: "left"
 }
