--- a/client/src/components/ContactUs/ContactUs.css
+++ b/client/src/components/ContactUs/ContactUs.css
@@ -1,4 +1,4 @@
-#sendTrashTalksAnEmailButton{
-    background-color: #163B53;
-    color: white;
+#sendTrashTalksAnEmailButton {
+  background-color: #163b53;
+  color: white;
 }
