--- a/client/src/pages/Landing/Landing.css
+++ b/client/src/pages/Landing/Landing.css
@@ -6,7 +6,7 @@
     text-align: left;
 }
 
-#about, #founders, #updates, #announcement {
+ #announcementsAndUpdatesContainer, #founders, #announcement {
     margin: 50px;
 }
 
