--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
-/*  background-image:url("http://www.sciencemag.org/sites/default/files/styles/article_main_large/public/cc_iStock-478639870_16x9.jpg?itok=1-jMc4Xv");
-*/}
+  /*  background-image:url("http://www.sciencemag.org/sites/default/files/styles/article_main_large/public/cc_iStock-478639870_16x9.jpg?itok=1-jMc4Xv");
+*/
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -24,6 +25,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
